fix bug data tidak tersimpan pada kategori_servis:lain
