# app/Http/Controllers/Api/Transaksi/LainLainController.php
@@ -9,6 +9,7 @@ use App\Models\Transaksi\ServisModel;
 use Illuminate\Http\Request;
 use App\Http\Requests\ServisRequest\CreateRequest;
 use App\Http\Requests\ServisRequest\UpdateRequest;
+use App\Http\Resources\LainLain\LainLainResource;
 use App\Http\Resources\Servis\ServisResource;
 
 class LainLainController extends Controller
@@ -24,6 +25,17 @@ class LainLainController extends Controller
         $this->servisModel = new ServisModel();
     }
 
+    /**
+     * @OA\Get(
+     * path="/api/laporan/lainlain",
+     * summary="Get data servis tipe lain-lain",
+     * tags={"Servis Kategori Lain-lain"},
+     * @OA\Response(
+     *  response=200,
+     *  description="Data servis tipe lain-lain berhasil ditemukan"
+     * ),
+     * )
+     */
     public function index(Request $request)
     {
         $result = $this->servisModel->getAllLainLain($request->all());
@@ -38,12 +50,13 @@ class LainLainController extends Controller
      * @OA\Post(
      * path="/api/laporan/lainlain",
      * summary="Tambah data servis tipe lain-lain",
-     * tags = {"Laporan","Lain Lain"},
+     * tags = {"Servis Kategori Lain-lain"},
      * @OA\RequestBody(
      *   required=true,
      *   description="Data yang dibutuhkan untuk menambah data servis tipe lain-lain",
      *   @OA\JsonContent(
      *     required={"master_armada_id", "nomor_nota", "nama_toko", "tanggal_servis", "nota_beli_items", "kategori_servis", "nama_tujuan_lain", "keterangan_lain", "nominal_lain", "jumlah_lain", "total_lain"},
+     *     
      *   )
      * ),
      * @OA\Response(
@@ -133,13 +146,31 @@ class LainLainController extends Controller
             ]);
         }
     }
+
+    /**
+     * @OA\Get(
+     *   path="/api/laporan/lainlain/{id}",
+     *  summary="Get data servis tipe lain-lain by id",
+     * tags={"Servis Kategori Lain-lain"},
+     * @OA\Parameter(
+     *  name="id",
+     *  description="ID dari data servis tipe lain-lain",
+     *  required=true,
+     *  in="path",
+     * ),
+     * @OA\Response(
+     *  response=200,
+     *  description="Data servis tipe lain-lain berhasil ditemukan"
+     * ),
+     * )
+     */
     public function show($id)
     {
         try {
             $result =  $this->servisModel->with('nota_beli_items', 'servis_mutasi.master_mutasi.master_rekening', 'master_armada')->findOrFail($id);
             return response()->json([
                 'status' => 'success',
-                'data' => new ServisResource($result)
+                'data' => new LainLainResource($result)
             ]);
         } catch (\Throwable $th) {
             return response()->json([
